# ai-pr-review

./: .gitignore  README.md  demo.py  pyproject.toml
.github/workflows/: ai-pr-review.yml
demo-animation/: README.md  opening_flow.py  render_overview.py  render_preview.py
docs/: 2026-05-29-summary.md  2026-05-30-summary.md  72h-plan.md  agent-coding-guide.md  architecture.md  contribution-guide.md  current-development-plan.md  final-audit-summary.md  functions-index.md  future-extensions.md  model-context-design.md  quality-control.md  review-guide.md  video-product-brief.md
docs/demo/: README.md  pr-1-ai-stage5.md  pr-1-rule.md  pr-42-ai-demo.md  pr-42-rule-demo.md
scripts/: demo.ps1
src/: models.py
src/analyzer/: ast_rules.py  context_builder.py  cross_file.py  diff_parser.py  risk_rules.py
src/cli/: main.py
src/github/: client.py
src/output/: json_report.py  markdown.py
src/reviewer/: engine.py  fix_tracker.py  prompt.py  provider.py  two_stage.py
src/service/: app.py
src/tmp_ci_test/: broken.py
src/utils/: __init__.py  actions.py  config.py  default_rules.yml  rule_loader.py
tests/: test_HelloWorld.py  test_context_builder.py  test_diff_parser.py  test_report_reliability.py  test_reviewer_engine.py  test_risk_rules.py
tools/: convert_to_utf8.py  generate_functions_index.py
vscode-extension/: .vscodeignore  LICENSE  README.md  ai-pr-review-0.2.0.vsix  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: diagnostics.ts  extension.ts  git.ts  panel.ts  report.ts  review-fetcher.ts
vscode-extension/test/: mock-vscode.js  (+1 more)
(+3 files in other folders)
